<resources>
    <string name="app_name">ToDo</string>
    <string name="note">Note</string>
    <string name="title">ToDo List</string>
    <string name="todo">TODO</string>
    <string name="add" />
    <string name="newtask" />
    <string name="newTask">Task</string>
    <string name="task">Task</string>
    <string name="addbtn">Add</string>
    <string name="cancelbtn">Cancel</string>
    <string name="todo22">TODO</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="viewTask" />
    <string name="select">Select</string>
    <string name="save">Save</string>
    <string name="delete_task_dialog_title">Delete Task</string>
    <string name="delete_task_dialog_message">Are you sure you want to delete this task?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="eteditText" />
</resources>