<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lightPink">

    <TextView
        android:id="@+id/tvTask_viewTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/viewTask"
        android:textColor="@color/pink"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editbtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="42dp"
        android:text="@string/edit"
        android:textStyle="bold"
        android:textSize="15sp"
        android:backgroundTint="@color/pink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTask_viewTasks" />

    <Button
        android:id="@+id/deletebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/pink"
        android:text="@string/delete"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editbtn"
        app:layout_constraintStart_toEndOf="@+id/editbtn"
        app:layout_constraintTop_toTopOf="@+id/editbtn" />

    <Button
        android:id="@+id/cancelbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/cancelbtn"
        android:textStyle="bold"
        android:textSize="15sp"
        android:backgroundTint="@color/pink"
        app:layout_constraintBottom_toBottomOf="@+id/deletebtn"
        app:layout_constraintStart_toEndOf="@+id/deletebtn"
        app:layout_constraintTop_toTopOf="@+id/deletebtn" />
</androidx.constraintlayout.widget.ConstraintLayout>