<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="editText"
        android:inputType="text"
        android:text="@string/eteditText"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="9dp"
        android:text="@string/save"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/pink"
        android:background="@drawable/rounded_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:text="@string/cancelbtn"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/pink"
        android:background="@drawable/rounded_button"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5" />
</androidx.constraintlayout.widget.ConstraintLayout>